Fix commit message box sizing
The commit message area would shrink down too much if the changes list
is too large.

https://codepen.io/noahblon/post/practical-guide-to-flexbox-dont-forget-
about-flex-shrink

--- a/app/styles/ui/_commit-message.scss
+++ b/app/styles/ui/_commit-message.scss
@@ -4,7 +4,9 @@
 #commit-message {
   border-top: 1px solid var(--box-border-color);
   flex-direction: column;
+  flex-shrink: 0;
   margin-top: auto;
+  z-index: 1;
 
   display: flex;
   background-color: var(--box-alt-background-color);
